force-app/main/default/objects/Performans__c/Performans__c.object-meta.xml
<CustomObject>
    <label>Performans</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Performans</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Performans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>