force-app/main/default/objects/Performans__c/fields/G_nl_k_Arama_Say_s__c.field-meta.xml
<CustomField>
    <fullName>G_nl_k_Arama_Say_s__c</fullName>
    <label>Günlük Arama Sayısı</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>