force-app/main/default/objects/Performans__c/fields/G_nl_k_Sat_Adedi__c.field-meta.xml
<CustomField>
    <fullName>G_nl_k_Sat_Adedi__c</fullName>
    <label>Günlük Satış Adedi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>