force-app/main/default/objects/Performans__c/fields/Gunluk_Konusma_Suresi__c.field-meta.xml
<CustomField>
    <fullName>Gunluk_Konusma_Suresi__c</fullName>
    <label>Günlük Konuşma Süresi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>