force-app/main/default/objects/Performans__c/fields/Personel__c.field-meta.xml
<CustomField>
    <fullName>Personel__c</fullName>
    <label>Personel</label>
    <referenceTo>Personel__c</referenceTo>
    <relationshipLabel>Performans</relationshipLabel>
    <relationshipName>Performans</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>