force-app/main/default/objects/Performans__c/fields/Tarih__c.field-meta.xml
<CustomField>
    <fullName>Tarih__c</fullName>
    <label>Tarih</label>
    <type>Date</type>
</CustomField>