force-app/main/default/objects/Performans__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Personel__c</columns>
    <columns>G_nl_k_Arama_Say_s__c</columns>
    <columns>Gunluk_Konusma_Suresi__c</columns>
    <columns>G_nl_k_Sat_Adedi__c</columns>
    <columns>Tarih__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>